# mac-bootstrap-template

./: .gitignore  .publicignore  Brewfile  CLAUDE.md  CONTEXT.md  Makefile  README.md  install.sh  pyproject.toml
agent/: README.md  agent-manifest.json  devspace.runtime.example.jsonc  manifest.yaml  mcp-policy.json  npm-global-packages.txt  pi-packages.txt  skills-distribution.json  skills-manifest.json  skills-promote.txt  skills-sources.jsonc
agent-skills/: README.md
clash/: Merge.yaml  manual-apps.md
data-hub/: CLAUDE.md  CONTEXT.md  README.md  candidate_store.py  daily_morning.sh  daily_reminder.sh  data_hub.runtime.jsonc.example  data_hub_config.py  date_utils.py  db_helper.py  knowledge_workflows.py  llm_wiki_client.py  llm_wiki_context.py  obsidian_helper.py  period_summary.py  run-daily-evening.sh  schema.sql  summary_calendar.py  summary_contracts.py  summary_inputs.py  summary_renderer.py  workflow_contracts.py  workflow_runner.py
docker/: install.sh
docs/: README.md  agent-prompt-mcp.md  agent-subagents.md  ci.md  clash-profile-flow.md  claude-daemon.md  colima-local.md  data-hub-record-knowledge.md  devspace-local.md  imgup.md  manual-apps.md  openwiki-boundary-decision.md  private-overlay.md  shell-startup.md  skill-supply-chain-baseline.md  skill-supply-chain.md
ghostty/: config  install.sh
git/: gitconfig.template
hammerspoon/: init.lua  install.sh
iterm2/: install.sh
launchd/: install_obsidian_jobs.sh  io.local.mac-bootstrap.cache-cleanup.plist  io.local.mac-bootstrap.claude-daemon.plist  io.local.mac-bootstrap.claude-daily-drill.plist  io.local.mac-bootstrap.claude-keepalive.plist  io.local.mac-bootstrap.devspace-tunnel.plist  io.local.mac-bootstrap.devspace.plist  io.local.mac-bootstrap.downloads-organizer.plist  io.local.mac-bootstrap.maxfiles.plist  io.local.mac-bootstrap.ssh-reverse-tunnel.plist  (+1 more)
(+656 files in other folders)
