[project]
name = "mac-bootstrap"
version = "0.1.0"
description = "macOS development environment bootstrap tests"
requires-python = ">=3.12"
dependencies = [
    "chinese-calendar>=1.9.0",
    "openai>=1.0.0",
]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
include = [
    "agent/data-hub/*.py",
    "agent/data-hub/source_adapters/*.py",
    "scripts/check-python-syntax.py",
    "scripts/render-codex-mcp-block.py",
    "scripts/run-doctor-checks.py",
    "scripts/sync-codex-mcp-config.py",
]
omit = [
    "scripts/render-clash-merge.py",
    "scripts/ssh-connect-proxy.py",
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
