[project]
name = "mac-bootstrap"
version = "0.1.0"
description = "macOS development environment bootstrap tests"
requires-python = ">=3.12"
dependencies = [
    "chinese-calendar>=1.9.0",
    "jsonschema>=4.0",
    "openai>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "machine: requires the local macOS machine, installed applications, or managed runtime state",
]

[tool.coverage.run]
branch = true
include = [
    "data-hub/*.py",
    "data-hub/source_adapters/*.py",
    "scripts/agent_mcp_runtime.py",
    "scripts/context7-mcp-bridge.py",
    "scripts/check-python-syntax.py",
    "scripts/render-codex-mcp-block.py",
    "scripts/run-doctor-checks.py",
    "scripts/sync-codex-mcp-config.py",
]
omit = [
    "scripts/render-clash-merge.py",
    "scripts/ssh-connect-proxy.py",
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
